# CV8

./: CMakeLists.txt
CV8/: CMakeLists.txt  CV8.cpp  CV8.h  prunik.cpp  prunik.h
